--- a/SocialFusion/Class/NewFeedDetailViewCell.xib
+++ b/SocialFusion/Class/NewFeedDetailViewCell.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<string key="IBDocument.SystemVersion">11D50b</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2177</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">1173</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIScrollView</string>
@@ -150,6 +150,27 @@
 															<int key="NSfFlags">16</int>
 														</object>
 													</object>
+													<object class="IBUIButton" id="183749538">
+														<reference key="NSNextResponder" ref="985197908"/>
+														<int key="NSvFlags">292</int>
+														<string key="NSFrame">{{47, 3}, {67, 34}}</string>
+														<reference key="NSSuperview" ref="985197908"/>
+														<reference key="NSWindow"/>
+														<reference key="IBUIBackgroundColor" ref="159653638"/>
+														<bool key="IBUIOpaque">NO</bool>
+														<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+														<int key="IBUIContentHorizontalAlignment">0</int>
+														<int key="IBUIContentVerticalAlignment">0</int>
+														<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
+														<reference key="IBUIHighlightedTitleColor" ref="129191068"/>
+														<object class="NSColor" key="IBUINormalTitleColor">
+															<int key="NSColorSpace">1</int>
+															<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+														</object>
+														<reference key="IBUINormalTitleShadowColor" ref="303967571"/>
+														<reference key="IBUIFontDescription" ref="1047018965"/>
+														<reference key="IBUIFont" ref="628409712"/>
+													</object>
 													<object class="IBUIButton" id="740464892">
 														<reference key="NSNextResponder" ref="985197908"/>
 														<int key="NSvFlags">274</int>
@@ -172,7 +193,7 @@
 															<string key="NSClassName">NSImage</string>
 															<string key="NSResourceName">btn_repost.png</string>
 														</object>
-														<object class="IBUIFontDescription" key="IBUIFontDescription">
+														<object class="IBUIFontDescription" key="IBUIFontDescription" id="420459395">
 															<int key="type">2</int>
 															<double key="pointSize">12</double>
 														</object>
@@ -181,6 +202,26 @@
 															<double key="NSSize">12</double>
 															<int key="NSfFlags">16</int>
 														</object>
+													</object>
+													<object class="IBUIButton" id="407485957">
+														<reference key="NSNextResponder" ref="985197908"/>
+														<int key="NSvFlags">274</int>
+														<string key="NSFrame">{{178, -2}, {94, 44}}</string>
+														<reference key="NSSuperview" ref="985197908"/>
+														<reference key="NSWindow"/>
+														<bool key="IBUIOpaque">NO</bool>
+														<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+														<int key="IBUIContentHorizontalAlignment">0</int>
+														<int key="IBUIContentVerticalAlignment">0</int>
+														<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
+														<reference key="IBUIHighlightedTitleColor" ref="129191068"/>
+														<object class="NSColor" key="IBUINormalTitleColor">
+															<int key="NSColorSpace">1</int>
+															<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+														</object>
+														<reference key="IBUINormalTitleShadowColor" ref="303967571"/>
+														<reference key="IBUIFontDescription" ref="420459395"/>
+														<reference key="IBUIFont" ref="177815768"/>
 													</object>
 													<object class="IBUILabel" id="1004029588">
 														<reference key="NSNextResponder" ref="985197908"/>
@@ -341,12 +382,9 @@
 				<bool key="IBUIHorizontal">NO</bool>
 			</object>
 			<object class="IBUITableView" id="343266016">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<string key="NSFrameSize">{306, 349}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MC44MjExNjc4ODMyIDAuMzQ2NzE1MzI4NSAxIDAAA</bytes>
@@ -471,6 +509,24 @@
 					</object>
 					<int key="connectionID">144</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">repost</string>
+						<reference key="source" ref="407485957"/>
+						<reference key="destination" ref="986509221"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">147</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">selectUser</string>
+						<reference key="source" ref="183749538"/>
+						<reference key="destination" ref="986509221"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">149</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -555,6 +611,8 @@
 							<reference ref="257438836"/>
 							<reference ref="740464892"/>
 							<reference ref="1050578239"/>
+							<reference ref="407485957"/>
+							<reference ref="183749538"/>
 						</array>
 						<reference key="parent" ref="977345865"/>
 					</object>
@@ -588,6 +646,16 @@
 						<reference key="object" ref="1050578239"/>
 						<reference key="parent" ref="985197908"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">146</int>
+						<reference key="object" ref="407485957"/>
+						<reference key="parent" ref="985197908"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">148</int>
+						<reference key="object" ref="183749538"/>
+						<reference key="parent" ref="985197908"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -601,6 +669,8 @@
 				<string key="135.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="142.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="143.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="146.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="148.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="24.CustomClassName">StatusDetailControllerWithWeb</string>
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">NewFeedDetailViewCell</string>
@@ -616,7 +686,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">144</int>
+			<int key="maxID">149</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -717,6 +787,8 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="comment:">id</string>
 						<string key="repost">id</string>
+						<string key="repostToWeixin:">id</string>
+						<string key="selectCommentUser:">id</string>
 						<string key="selectUser">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
@@ -726,6 +798,14 @@
 						</object>
 						<object class="IBActionInfo" key="repost">
 							<string key="name">repost</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="repostToWeixin:">
+							<string key="name">repostToWeixin:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="selectCommentUser:">
+							<string key="name">selectCommentUser:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="selectUser">
@@ -803,6 +883,6 @@
 			<string key="detail_head.png">{51, 51}</string>
 			<string key="detail_header_bg@2x.png">{640, 100}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">1173</string>
 	</data>
 </archive>
