--- a/SocialFusion/Class/RenrenUserInfoViewController.xib
+++ b/SocialFusion/Class/RenrenUserInfoViewController.xib
@@ -51,6 +51,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{100, 100}</string>
 										<reference key="NSSuperview" ref="462157746"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="133987987"/>
 										<string key="NSReuseIdentifierKey">_NS:567</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -65,6 +66,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{100, 100}</string>
 										<reference key="NSSuperview" ref="462157746"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="786661683"/>
 										<string key="NSReuseIdentifierKey">_NS:567</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -75,6 +77,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 0.5}, {100, 100}}</string>
 										<reference key="NSSuperview" ref="462157746"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="375184028"/>
 										<string key="NSReuseIdentifierKey">_NS:225</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -111,6 +114,7 @@
 								</array>
 								<string key="NSFrame">{{15, 15}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="670305735"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="401079730"/>
 								<string key="NSReuseIdentifierKey">_NS:196</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="133658002">
@@ -130,6 +134,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{290, 250}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="584058939"/>
 										<string key="NSReuseIdentifierKey">_NS:567</string>
 										<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -144,6 +149,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{33, 15}, {42, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="261974524"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -175,6 +181,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{15, 55}, {60, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="215324463"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -196,6 +203,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{90, 15}, {42, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="646556809"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -216,6 +224,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{90, 55}, {190, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="609594234"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -236,6 +245,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{90, 95}, {190, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="174207924"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -256,6 +266,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{33, 95}, {42, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="666491520"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -277,6 +288,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{33, 135}, {42, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="171367182"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -298,6 +310,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{90, 135}, {190, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="686762415"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -318,6 +331,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{33, 175}, {42, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="1006184781"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -339,6 +353,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{90, 175}, {190, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="980886637"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -359,6 +374,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{10, 215}, {65, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="27561724"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -380,6 +396,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{90, 215}, {190, 20}}</string>
 										<reference key="NSSuperview" ref="595530084"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -398,6 +415,7 @@
 								</array>
 								<string key="NSFrame">{{8, 130}, {290, 250}}</string>
 								<reference key="NSSuperview" ref="670305735"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="220901800"/>
 								<string key="NSReuseIdentifierKey">_NS:196</string>
 								<reference key="IBUIBackgroundColor" ref="133658002"/>
@@ -412,7 +430,8 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{165, 30}</string>
 										<reference key="NSSuperview" ref="375184028"/>
-										<reference key="NSNextKeyView" ref="26490674"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="476408408"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
 										<bool key="IBUIClipsSubviews">YES</bool>
@@ -439,6 +458,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 70}, {40, 40}}</string>
 										<reference key="NSSuperview" ref="375184028"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="595530084"/>
 										<string key="NSReuseIdentifierKey">_NS:225</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -465,6 +485,7 @@
 										<int key="NSvFlags">292</int>
 										<string key="NSFrame">{{0, 40}, {160, 21}}</string>
 										<reference key="NSSuperview" ref="375184028"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="145566189"/>
 										<string key="NSReuseIdentifierKey">_NS:328</string>
 										<bool key="IBUIOpaque">NO</bool>
@@ -490,9 +511,33 @@
 											<int key="NSfFlags">16</int>
 										</object>
 									</object>
+									<object class="IBUIButton" id="476408408">
+										<reference key="NSNextResponder" ref="375184028"/>
+										<int key="NSvFlags">292</int>
+										<string key="NSFrameSize">{160, 61}</string>
+										<reference key="NSSuperview" ref="375184028"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="26490674"/>
+										<string key="NSReuseIdentifierKey">_NS:225</string>
+										<bool key="IBUIOpaque">NO</bool>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+										<int key="IBUIContentHorizontalAlignment">0</int>
+										<int key="IBUIContentVerticalAlignment">0</int>
+										<bool key="IBUIShowsTouchWhenHighlighted">YES</bool>
+										<bool key="IBUIAdjustsImageWhenHighlighted">NO</bool>
+										<reference key="IBUIHighlightedTitleColor" ref="619092703"/>
+										<object class="NSColor" key="IBUINormalTitleColor">
+											<int key="NSColorSpace">1</int>
+											<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+										</object>
+										<reference key="IBUINormalTitleShadowColor" ref="640575026"/>
+										<reference key="IBUIFontDescription" ref="77676016"/>
+										<reference key="IBUIFont" ref="755000672"/>
+									</object>
 								</array>
 								<string key="NSFrame">{{125, 15}, {165, 100}}</string>
 								<reference key="NSSuperview" ref="670305735"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="792922666"/>
 								<string key="NSReuseIdentifierKey">_NS:196</string>
 								<reference key="IBUIBackgroundColor" ref="133658002"/>
@@ -501,6 +546,7 @@
 						</array>
 						<string key="NSFrameSize">{306, 389}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="462157746"/>
 						<string key="NSReuseIdentifierKey">_NS:190</string>
 						<reference key="IBUIBackgroundColor" ref="133658002"/>
@@ -512,6 +558,7 @@
 				</array>
 				<string key="NSFrameSize">{306, 389}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="670305735"/>
 				<reference key="IBUIBackgroundColor" ref="133658002"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -640,6 +687,15 @@
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">63</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">didClickHomePageButton:</string>
+						<reference key="source" ref="476408408"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">70</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -786,6 +842,7 @@
 							<reference ref="145566189"/>
 							<reference ref="792922666"/>
 							<reference ref="26490674"/>
+							<reference ref="476408408"/>
 						</array>
 						<reference key="parent" ref="670305735"/>
 					</object>
@@ -812,6 +869,11 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">64</int>
 						<reference key="object" ref="26490674"/>
+						<reference key="parent" ref="375184028"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">66</int>
+						<reference key="object" ref="476408408"/>
 						<reference key="parent" ref="375184028"/>
 					</object>
 				</array>
@@ -843,6 +905,7 @@
 				<string key="60.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="62.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="64.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="66.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -850,9 +913,134 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">65</int>
+			<int key="maxID">70</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CoreDataViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CoreDataViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">RenrenUserInfoViewController</string>
+					<string key="superclassName">UserInfoViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">didClickHomePageButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">didClickHomePageButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">didClickHomePageButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="birthDayLabel">UILabel</string>
+						<string key="companyLabel">UILabel</string>
+						<string key="highSchoolLabel">UILabel</string>
+						<string key="hometownLabel">UILabel</string>
+						<string key="universityLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="birthDayLabel">
+							<string key="name">birthDayLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="companyLabel">
+							<string key="name">companyLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="highSchoolLabel">
+							<string key="name">highSchoolLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="hometownLabel">
+							<string key="name">hometownLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="universityLabel">
+							<string key="name">universityLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/RenrenUserInfoViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UserInfoViewController</string>
+					<string key="superclassName">CoreDataViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="didClickAtButton">id</string>
+						<string key="didClickPhotoFrameButton">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="didClickAtButton">
+							<string key="name">didClickAtButton</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="didClickPhotoFrameButton">
+							<string key="name">didClickPhotoFrameButton</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="atButton">UIButton</string>
+						<string key="followButton">UIButton</string>
+						<string key="genderLabel">UILabel</string>
+						<string key="nameLabel">UILabel</string>
+						<string key="photoImageView">UIImageView</string>
+						<string key="photoView">UIView</string>
+						<string key="relationshipLabel">UILabel</string>
+						<string key="scrollView">UIScrollView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="atButton">
+							<string key="name">atButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="followButton">
+							<string key="name">followButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="genderLabel">
+							<string key="name">genderLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nameLabel">
+							<string key="name">nameLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="photoImageView">
+							<string key="name">photoImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="photoView">
+							<string key="name">photoView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="relationshipLabel">
+							<string key="name">relationshipLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scrollView">
+							<string key="name">scrollView</string>
+							<string key="candidateClassName">UIScrollView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UserInfoViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
